Bug correction Iphone5 screen

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -506,7 +506,7 @@ footer {
     margin-bottom: 0;
   }
   .content {
-    height: 120%;
+    height: 140%;
     margin: 3rem 0 0 0;
   }
   .hero-section {
